--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ ext.deps = [
         ormlite                         : 'com.j256.ormlite:ormlite-android:5.0',
         picasso                         : 'com.squareup.picasso:picasso:2.5.2',
         timber                          : 'com.jakewharton.timber:timber:4.5.1',
+        rxlog                           : 'sk.teamsoft:rxlog:1.0.0',
         //compiler
         autoservice                     : 'com.google.auto.service:auto-service:1.0-rc2',
         autocommon                      : 'com.google.auto:auto-common:0.8',
@@ -49,7 +50,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.3.1'
         classpath 'io.fabric.tools:gradle:1.22.1'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
     }
 }
